examples/test/testpolicy7665.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7665
  namespace: namespace304
spec:
  podSelector:
    matchLabels:
      key16: value4
      key41: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value23
          key13: value29
          key11: value0
      podSelector:
        matchLabels:
          key40: value49
          key27: value9
